--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "18.2.7",
     "ai": "^2.1.28",
     "autoprefixer": "10.4.14",
+    "clsx": "^2.0.0",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "langchain": "^0.0.150",
@@ -27,7 +28,10 @@
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-markdown": "^8.0.7",
     "react-toastify": "^9.1.3",
+    "rehype-highlight": "^7.0.0",
+    "remark-gfm": "^3.0.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
     "zod": "^3.21.4",
