--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   "dependencies": {
     "@next/bundle-analyzer": "^13.4.19",
     "@supabase/supabase-js": "^2.32.0",
+    "@tanstack/react-query": "5.29.2",
     "@types/node": "20.4.5",
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
     "ai": "^2.1.28",
     "autoprefixer": "10.4.14",
+    "axios": "^1.6.8",
     "clsx": "^2.0.0",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
@@ -38,6 +40,8 @@
     "zod-to-json-schema": "^3.21.4"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.28.11",
+    "@types/react-query": "^1.2.9",
     "prettier": "3.0.0"
   }
 }
