--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node": ">=18"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
     "@next/bundle-analyzer": "^13.4.19",
     "@supabase/supabase-js": "^2.32.0",
     "@tanstack/react-query": "^5.29.2",
@@ -21,6 +22,7 @@
     "@types/react-dom": "18.2.7",
     "ai": "^2.1.28",
     "autoprefixer": "10.4.14",
+    "@heroicons/react": "^2.1.1",
     "axios": "^1.6.8",
     "clsx": "^2.0.0",
     "eslint": "8.46.0",
