--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^2.1.1",
     "@next/bundle-analyzer": "^13.4.19",
     "@supabase/supabase-js": "^2.32.0",
     "@tanstack/react-query": "^5.29.2",
@@ -22,13 +23,12 @@
     "@types/react-dom": "18.2.7",
     "ai": "^2.1.28",
     "autoprefixer": "10.4.14",
-    "@heroicons/react": "^2.1.1",
     "axios": "^1.6.8",
     "clsx": "^2.0.0",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "langchain": "^0.0.150",
-    "next": "13.4.12",
+    "next": "latest",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
