fix: update env example

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
-OPENAI_API_KEY="YOUR_API_KEY"
-GOOGLE_ANALYTICS_KEY="YOUR_ANALYTICS_KEY"
+GOOGLE_ANALYTICS_KEY=
+API_VERSION=
+API_DEPLOYMENT_NAME=
+API_INSTANCE_NAME=
+API_KEY=
