--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
     "@next/bundle-analyzer": "^13.4.19",
+    "@phosphor-icons/react": "^2.1.7",
     "@supabase/supabase-js": "^2.32.0",
     "@tanstack/react-query": "^5.29.2",
     "@types/node": "20.4.5",
