--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.7",
+    "react-range": "^1.9.2",
     "react-toastify": "^10.0.5",
     "rehype-highlight": "^7.0.0",
     "remark-gfm": "^3.0.0",
