--- a/package.json
+++ b/package.json
@@ -26,8 +26,6 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.6.8",
     "clsx": "^2.0.0",
-    "eslint": "8.46.0",
-    "eslint-config-next": "13.4.12",
     "langchain": "^0.0.150",
     "next": "latest",
     "postcss": "8.4.27",
@@ -45,7 +43,13 @@
     "zod-to-json-schema": "^3.21.4"
   },
   "devDependencies": {
-    "@tanstack/eslint-plugin-query": "^5.28.11",
+    "@tanstack/eslint-plugin-query": "^5.17.7",
+    "@typescript-eslint/eslint-plugin": "^7.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.4",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-trim": "^0.5.0",
+    "eslint-plugin-unused-imports": "^3.0.0",
     "@types/react-query": "^1.2.9",
     "prettier": "3.0.0"
   }
