--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/node": "20.4.5",
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
+    "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "ai": "^2.1.28",
     "autoprefixer": "10.4.14",
