--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.52.1",
+    "react-loading-skeleton": "^3.4.0",
     "react-markdown": "^8.0.7",
     "react-range": "^1.9.2",
     "react-toastify": "^10.0.5",
