--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,7 +29,7 @@
         ]
       }
     ],
-    "react-hooks/exhaustive-deps": "error",
+    "react-hooks/exhaustive-deps": "warning",
     "import/order": [
       "error",
       {
